v0.2/dev/ros2_uav_px4/_sources/generated/file_include_ros2_uav_px4_utils_uav_cpp_ros2_conversions.hpp.rst.txt

.. _file_include_ros2_uav_px4_utils_uav_cpp_ros2_conversions.hpp:

File uav_cpp_ros2_conversions.hpp
=================================

|exhale_lsh| :ref:`Parent directory <dir_include_ros2_uav_px4_utils>` (``include/ros2_uav_px4/utils``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS


.. contents:: Contents
   :local:
   :backlinks: none

Definition (``include/ros2_uav_px4/utils/uav_cpp_ros2_conversions.hpp``)
------------------------------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_ros2_uav_px4_utils_uav_cpp_ros2_conversions.hpp.rst





Includes
--------


- ``ros2_uav_interfaces/msg/pose_heading.hpp``

- ``uav_cpp/types/setpoints.hpp``






Namespaces
----------


- :ref:`namespace_uav_ros2`

- :ref:`namespace_uav_ros2__utils`


Functions
---------


- :ref:`exhale_function_uav__cpp__ros2__conversions_8hpp_1a59d6555831c3aef50428a1b54ec5379a`

