v0.7/dev/ros2_uav_px4/_sources/generated/file_include_ros2_uav_px4_utils_uav_cpp_ros2_conversions.hpp.rst.txt

.. _file_include_ros2_uav_px4_utils_uav_cpp_ros2_conversions.hpp:

File uav_cpp_ros2_conversions.hpp
=================================

|exhale_lsh| :ref:`Parent directory <dir_include_ros2_uav_px4_utils>` (``include/ros2_uav_px4/utils``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS


.. contents:: Contents
   :local:
   :backlinks: none

Definition (``include/ros2_uav_px4/utils/uav_cpp_ros2_conversions.hpp``)
------------------------------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_ros2_uav_px4_utils_uav_cpp_ros2_conversions.hpp.rst





Includes
--------


- ``px4_msgs/msg/vehicle_attitude_setpoint.hpp``

- ``ros2_uav_interfaces/msg/pose_heading.hpp``

- ``uav_cpp/module_io/fcu_inputs.hpp``

- ``uav_cpp/module_io/module_io.hpp``






Namespaces
----------


- :ref:`namespace_uav_ros2`

- :ref:`namespace_uav_ros2__utils`


Functions
---------


- :ref:`exhale_function_namespaceuav__ros2_1_1utils_1a7316389ae8eeb5e4a08251842a549e6c`

- :ref:`exhale_function_namespaceuav__ros2_1_1utils_1add5097611370add723120f1fc5a15269`

